--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,6 @@
 @tailwind utilities;
 
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
-
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -16,4 +12,13 @@
 * {
 	padding: 0;
 	margin: 0;
+}
+main{
+	background-image: url(./assets/bg-sidebar-desktop.svg);
+}
+@media (max-width: 700px) and (min-width: 0px) {
+	main{
+		background-image: url(./assets/bg-sidebar-mobile.svg);
+	}
+	
 }
